Revert "Fixed value mapping dropdowns going off-screen caused by very long PDF field option labels" Reverted commit causes mapping table column widths to be incorrect on small screens.
This reverts commit a4c1e53f933a60265e86371269789e691e5e4adc.

--- a/css/admin.css
+++ b/css/admin.css
@@ -114,7 +114,6 @@
 
 .pdf-forms-for-wpforms-admin .mapping-table
 {
-	table-layout: fixed;
 	width: 100%;
 }
 
